force-app/api/objects/CoreLibs_IdempotentEntry__c/CoreLibs_IdempotentEntry__c.object-meta.xml
<CustomObject>
    <description>Entry that is used for idempotency enabled endpoints</description>
    <label>Idempotent Entry</label>
    <nameField>
        <displayFormat>IE-{000000}</displayFormat>
        <label>Idempotent Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idempotent Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>