force-app/api/objects/CoreLibs_IdempotentEntry__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <description>The Idempotency key used to guarantee that redundant requests aren&apos;t processed.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >The Idempotency key used to guarantee that redundant requests aren&apos;t processed.</inlineHelpText>
    <label>Idempotency Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>