force-app/api/objects/CoreLibs_IdempotentEntry__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>Response details for the incoming request.</description>
    <inlineHelpText>Response details for the incoming request.</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>