force-app/api/objects/CoreLibs_IdempotentEntry__c/fields/ResponseHeaders__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeaders__c</fullName>
    <description>Response header details for the incoming request.</description>
    <inlineHelpText>Response header details for the incoming request.</inlineHelpText>
    <label>Response Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>