force-app/api/objects/CoreLibs_IdempotentEntry__c/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <description>Status code for the response.</description>
    <inlineHelpText>Status code for the response.</inlineHelpText>
    <label>Response Status Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>