force-app/api/objects/CoreLibs_IdempotentEntry__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Fully qualified URL for the endpoint being hit.</description>
    <inlineHelpText>Fully qualified URL for the endpoint being hit.</inlineHelpText>
    <label>Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>